Fix issues found with FindBugs
git-svn-id: svn+ssh://svn.code.sf.net/p/omegat/svn/trunk@7124 b0d8beef-cb45-0410-a8e4-c0d495c3b779